[package]
name = "ai-research-agent"
version = "0.1.0"
edition = "2021"
description = "A production-ready AI research agent built with Rig framework"
authors = ["Ahmad <ahmedhawash321@gmail.com>"]
license = "MIT"

[dependencies]
# Core AI Framework
rig-core = { version = "0.27", features = ["derive"] }

# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization & HTTP
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# Search & Tools
duckduckgo_search = "0.1"

# CLI & Configuration
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Error Handling & Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
